demos/codepen/vue-pagination/src/style.scss
//
// # Reset
// ================================
* {
  position: relative;
  box-sizing: inherit;
}

html, body, .page {
  height: 100%;
}

body {
  margin: 0;
  font: 400 14px/16px sans-serif;
  color: white;
  background: linear-gradient(rgb(15, 17, 19), rgb(31, 33, 35));
  box-sizing: border-box;
  user-select: none; // just for demo
  // overflow: hidden;
}

.page {
  display: flex;
}

.app {
  width: 256px;
  margin: auto;
}

//
// # Emoji
// ================================
.emoji-wrap {
  display: flex;
  height: 128px;
}

.emoji {
  display: flex;
  position: absolute;
  width: 100%;
  height: 100%;
  font-size: 128px;
  
  span {
    margin: auto;
  }
}

//
// # Buttons
// ================================
.button-wrap {
  display: flex;
  justify-content: space-between;
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  cursor: pointer;
  
  input {
    display: block;
    width: 100%;
    color: #fff;
    text-align: center;
    border: none;
    background: transparent;
  }

  &.-emoji {
    padding: 4px 0px 0 0;
    font-size: 24px;
    transition: all 0.25s ease-in-out;
  }

  &.-active {
    background: dodgerblue;
  }

  &[hide] {
    visibility: hidden;
  }
  
  &[dim] {
    pointer-events: none;
    opacity: 0.25;
  }
}

//
// # Item
// ================================
.item-wrap-wrap {
  height: 64px;
  margin: 0 0 16px;
}

.item-wrap {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  // background: blue;
}

.item {
  display: flex;
  width: 25%;
  height: 32px;
  
  > span {
    margin: auto;
  }
}


//
// # Transitions
// ================================
.fade-enter-active,
.fade-leave-active {
  transition: all 0.5s ease-in-out;
}

.fade-enter, .fade-leave-active {
  transform: translate(100%);
  opacity: 0;
}

